# uaimodal

./: .gitignore  404.html  README.md  createWheel.bat  gitignore  index.html  installWheelBrain.bat  installWheelProgramData.bat  mkdocs.yml  objects.inv  outtext.json  setup.cfg  setup.py  startDocsServer.bat  testImport.py
.github/workflows/: ci.yml  python-publish.yml
deploy/: index.html
deploy_/: index.html
docs/: classes.md  deploy.md  firebase.md  gen_ref_pages.py  hair.md  index.md  jobs.md  pipelines_merger.md  sadtalk.md  uaiDiffusers.md  utils.md
examples/: examples.ipynb
firebase/: index.html
jobs/: index.html
search/: search_index.json
uaimodal/: __init__.py  deploy.py  utils.py
uaimodal/api/: __init__.py  firebase.py  job.py
utils/: index.html
