[metadata]
name = uaimodal
version = 1.0.5.2
author = Justin Jaro
author_email = info@uai.contact
url = https://uai.software
description = uaimodal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
[tool.setuptools.packages]
find = {uaimodal}  # Scan the project directory with the default parameters

[options]
packages = find:

